Scrollbars appear when content is larger than the client area. Changed styles to fix this issue.
git-svn-id: svn://mona.davinci.nl/lisa/bioshock/trunk@2979 e4814794-f0f8-11e1-949a-37c09b20bee5

--- a/Lisa.Bioshock/Content/CodeMirror/codemirror.css
+++ b/Lisa.Bioshock/Content/CodeMirror/codemirror.css
@@ -5,10 +5,12 @@
   font-family: "Droid Sans Mono";
   height: 100%;
   font-size: 15px;
+  -overflow:hidden !important;
+
 }
 .CodeMirror-scroll {
   /* Set scrolling behaviour here */
-  overflow: auto;
+  overflow: hidden;
 }
 
 /* PADDING */
