--- a/Lisa.Bioshock/Content/Site.css
+++ b/Lisa.Bioshock/Content/Site.css
@@ -65,35 +65,16 @@ textarea {
 
 #editorTab
 {
-    /*width: 500px;
-    height: 400px;
-    min-width: 500px;
-    min-height: 400px;
-    display: none;
-    border: 3px solid #c1c1c1;
-    border-radius: 5px 5px 5px 5px;
-    padding: 0;
-    position: relative;*/
-    
     position: absolute;
     left:200px;
     top: 100px;
-    padding: 0px;
     padding: 1em;
 }
 
 #editor
 {
-    /*resize: none;*/
-    /*position: relative;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border: none;*/
-
     border: 1px solid blue;
-    width: 400px;
+    /*width: 400px;*/
     margin: 0;
     resize: none;
 }
@@ -119,6 +100,18 @@ textarea {
     height: 100%;
     width: 100%;
     display: none;
-}    
+}  
 
+#editorContainer {
+    min-width: 200px;
+    min-height: 50px;
+    width: 600px;
+    height: 400px;
+    border: 1px solid #c1c1c1;
+}  
 
+#toolbar {
+
+    height:20px;
+    background-color: #c1c1c1;
+}
